fix math overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,7 +14,7 @@
 }
 
 .math-display > .katex-display > .katex {
-  @apply clear-both overflow-x-scroll whitespace-normal text-left;
+  @apply clear-both overflow-x-auto overflow-y-hidden whitespace-normal text-left;
 }
 
 .col-list {
